@@ -37,6 +37,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #21222: Passing name keyword argument to mock.create_autospec now
+  works.
+
 - Issue #21197: Add lib64 -> lib symlink in venvs on 64-bit non-OS X POSIX.
 
 - Issue #17498: Some SMTP servers disconnect after certain errors, violating
